syntax = "proto3";

package calculator;
option go_package = "src/github.com/kratos2511/go_grpc/calculator/calculatorpb";

service CalculateSumService {
    rpc calculateSum(CalculateSumRequest) returns (CalculateSumResponse) {};
    rpc streamAvg(stream StreamAvgRequest) returns (StreamAvgResponse){};
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}

message Numbers {
    repeated int32 numbers = 1;
}

message CalculateSumRequest {
    Numbers numbers = 1;
}

message CalculateSumResponse {
    int32 sum = 1;
}

message StreamAvgRequest {
    int32 number = 1;
}

message StreamAvgResponse {
    float average = 1;
}

message FindMaximumRequest {
    int64 number = 1;
}

message FindMaximumResponse {
    int64 maximum = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}